--- a/proposal/proposal_template.Rmd
+++ b/proposal/proposal_template.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "Project Proposal"
-subtitle: "due October 11, 2021 by 11:59 PM "
+title: "Project Proposal (3 page limit)"
+subtitle: "due October 14, 2022 by 4:00 PM "
 author: "Your names and team name here"
 date: ""
 output: pdf_document
@@ -18,7 +18,7 @@ library(tidyverse)
 
 # Introduction and Data, including Research Questions
 
-(The introduction should introduce your general research question and your data (where it came from, how it was collected, what are the cases, what are the variables, etc.). Your research questions should be clearly specified. The motivation for your research question should be clear, with citations to relevant literature as appropriate.)
+The introduction should introduce your general research question and your data (where it came from, how it was collected, what are the cases, what are the variables, etc.). Your research questions should be clearly specified. The motivation for your research question should be clear, with citations to relevant literature as appropriate. Clearly make a case for the global health relevance of your research question.
 
 # Glimpse
 
@@ -26,5 +26,8 @@ library(tidyverse)
 
 # Data Analysis Plan
 
-(Specify the outcome (response, Y) and predictor (explanatory, X) variables you will use to answer your question, as well as the comparison groups you will use, if applicable. You may include very preliminary exploratory data analysis, including some summary statistics and visualizations, along with some explanation on how they help you learn more about your data. Note the statistical method(s) that you believe will be useful in answering your question(s). 
-What results from these specific statistical methods are needed to support your hypothesized answer?)
+The outcome (response, Y) and predictor (explanatory, X) variables you will use to answer your question should be clearly specified. Any specific comparisons of interest should be described.
+
+This must include preliminary exploratory data analysis, including some summary statistics and visualizations, along with some explanation on how they help you learn more about your data. (You can augment these later as you work on your project.)
+The statistical method(s) that you believe will be useful in answering your question(s) should be described. (You can update these later as you work on your project.)
+
